Fix visibility of srollbars all around the app. Add the first home place cards

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,9 +44,14 @@ h3 {
 .content {
   grid-area: content;
   overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
-#sessions-new, #pages-tastes {
+#sessions-new,
+#pages-tastes {
   .grid-content .app-navbar {
     display: none;
   }
