--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,12 +1,16 @@
 .home-grid {
   background: linear-gradient(167.94deg, $my-green -7.36%, $my-black 19.42%);
   display: grid;
-  grid-gap: 24px;
+  grid-gap: 56px;
   grid-template-rows: 30fr 15fr 25fr 20fr 20fr;
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
   position: relative;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   .home-header {
     color: $white;
@@ -53,7 +57,7 @@
       color: $white;
       font-size: 24px;
       font-weight: bold;
-      padding: 0 24px;
+      padding: 0 24px 20px;
       text-transform: uppercase;
     }
   }
